--- a/index.html
+++ b/index.html
@@ -3,9 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dayna Lewis</title>
+    <link rel="stylesheet" href="Dayna.css">
+    <script scr="javacript.js"></script>
+    <style>
+        .box-header{display: block;
+        justify-content:space-between;
+        align-items: center;
+    padding: 10px 20px;
+width: 1420px;}
+
+   
+
+    .logo {
+      font-size: 24px;
+      font-weight: bold;}
+
+      nav{ margin-right: 20px;
+    justify-content: space-between;}
+
+      nav a {
+      color: #fff; 
+      text-decoration: none; 
+      padding: 10px 20px; /* Add padding for box effect */
+      border-radius: 100px; /* Optional: Round the corners of the box */
+    }
+        
+    </style>
 </head>
 <body>
-    
+    <nav>
+        <header class="box-header">
+        <div id="logo">
+            <h1>Dayna Lewis</h1>
+        </div>
+        <div id="links">
+             <a class="active">HOME</a>
+            <a href="about.html">ABOUT</a>
+            <a href="portfolio.html">PORTFOLIO</a>
+            </div>
+        </nav>
+    </body>
+</header>
+        <h2>Student, Bookworm, Cook</h2>
+        <img src="https://static.vecteezy.com/system/resources/thumbnails/027/945/597/small/happy-middle-aged-business-afro-woman-ceo-standing-in-office-arms-crossed-photo.jpg">
+        <p>Interested in learning and improving my skills as a fullstack developer.</p>
+        <q class="quote-inline" id="hayes-quote">The experst in anything was once a beginner.</q>
+            <p>- Helen Hayes</p>
 </body>
 </html>
