--- a/portfolio.html
+++ b/portfolio.html
@@ -3,9 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dayan Lewis</title>
+    <link rel="stylesheet" href="Dayna.css">
+    <script src="javascript.js"></script>
+    <style>
+        .box-header{display: block;
+        justify-content:space-between;
+        align-items: center;
+    padding: 10px 20px;
+width: 1420px;}
+
+   
+
+    .logo {
+      font-size: 24px;
+      font-weight: bold;}
+
+      nav{ margin-right: 20px;
+    justify-content: space-between;}
+
+      nav a {
+      color: #fff; 
+      text-decoration: none; 
+      padding: 10px 20px; /* Add padding for box effect */
+      border-radius: 100px; /* Optional: Round the corners of the box */
+    }
+        
+    </style>
 </head>
 <body>
-    
+    <nav>
+        <header class="box-header">
+        <div id="logo">
+          <h1>Dayna Lewis</h1>  
+        </div>
+        <div id="links">
+            <a href="index.html">HOME</a>
+            <a href="about.html">ABOUT</a>
+            <a class="active">PORTFOLIO</a>
+        </div>
+        </header>
+    </nav>
+    <main>
+        <h1 id="portfolio header">Projects that I've participated in.</h1>
+        <section class="portfolio">
+            <h2>First Project</h2>
+            <img src="https://i.pinimg.com/236x/09/13/72/0913728ed97304c9616427d1efd538cc.jpg">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi at
+                earum fuga harum alias nobis, eaque optio laudantium dolor sed
+                eligendi consequatur distinctio aperiam accusantium, architecto
+                exercitationem perferendis minus error.</p>
+        </section>
+        <section class="portfolio">
+        <h2>Second Project</h2>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShyhELm5WFGmf4U_8bOsbaTOXHcl17PBUK3Q&s">
+        <p>
+            Fuga dolore impedit suscipit, vero odit, sequi in deleniti, odio
+            ipsa facere et. Consequatur modi cum ullam adipisci unde amet qui
+            sed odio officia ipsa omnis earum quibusdam, dolor totam?
+        </p>
+        </section>
+        <section class="portfolio">
+            <h2>Third Project</h2>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQKZxH5d1bJrC9KyG3h19w49w70cRmbZFMrjw&s">
+            <p>
+                Eveniet illum illo explicabo ea amet expedita fugiat omnis excepturi
+                dignissimos unde nam beatae consequuntur praesentium quas voluptas,
+                doloremque nemo reiciendis consequatur sed ut officia soluta
+                repellendus! Corporis, ex quo!
+            </p>
+        </section>
+    </main>
 </body>
 </html>
