--- a/about.html
+++ b/about.html
@@ -6,12 +6,11 @@
     <title>Dayna Lewis</title>
  <link rel="stylesheet" href="Dayna.css">
     <script src="javacript,js"></script>
-    <script src="success.js"></script>
     <style>
         .box-header{display: block;
         justify-content:space-between;
         align-items: center;
-    padding: 10px 20px;
+    padding: 10px 10px;
 width: 1420px;}
 
    
@@ -23,7 +22,7 @@ width: 1420px;}
             padding: 3px;
             width: 850px; /* Adjust width as needed */
             margin: 10px;
-            display: inline-block;
+            display: grid;
            }
 
 
@@ -78,6 +77,7 @@ width: 1420px;}
             <p>I love listening to different kinds of music. From pop, hip hop, shoegaze, new age, indie, underground, etc.</p>
         </section>
         </div>
-    </main>
+    main>
+
 </body>
 </html>
