--- a/portfolio.html
+++ b/portfolio.html
@@ -10,19 +10,17 @@
         .box-header{display: block;
         justify-content:space-between;
         align-items: center;
-    padding: 10px 20px;
+    padding: 10px 10px;
 width: 1420px;}
 
 .box{
-            background-color: paleturquoise;
+    background-color: paleturquoise;
             border: 10px solid black;
             border-bottom: 10px solid black;
             padding: 3px;
-            width: 500px; /* Adjust width as needed */
+            width: 850px; /* Adjust width as needed */
             margin: 10px;
-            display: inline-block;
-            justify-content: center;
-
+            display: grid;
            }
 
     .logo {
@@ -45,7 +43,7 @@ width: 1420px;}
     <nav>
         <header class="box-header">
         <div id="logo">
-          <h1>Dayna Lewis</h1>  
+          <h1>Dayna Lewis</h1>
         </div>
         <div id="links">
             <a href="index.html">HOME</a>
@@ -90,5 +88,6 @@ width: 1420px;}
         </section>
     </div>
     </main>
+    
 </body>
 </html>
