--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         .box-header{display: block;
         justify-content:space-between;
         align-items: center;
-    padding: 10px 20px;
+    padding: 10px 10px;
 width: 1420px;}
 
            .box{
@@ -18,10 +18,9 @@ width: 1420px;}
             border: 10px solid black;
             border-bottom: 10px solid black;
             padding: 3px;
-            width: 500px; /* Adjust width as needed */
+            width: 850px; /* Adjust width as needed */
             margin: 10px;
-            display: inline-block;
-            justify-content: center;
+            display: grid;
 
            }
 
